# tango__tango-icon-theme

./: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.ac  index.theme.in.in  render-bitmaps.pl.in
po/: .gitignore  POTFILES.in
svg/: .gitignore  Makefile.am
